--- a/doc/kdevelop/kdevelop-survey.docbook
+++ b/doc/kdevelop/kdevelop-survey.docbook
@@ -7,7 +7,7 @@
   </authorgroup>
 </chapterinfo>
 
-<title>Survey of &kdevelop; Features</title>
+<title>Overview of &kdevelop; Features</title>
 
 <indexterm zone="kdevelop-survey">
   <primary>&kdevelop;</primary>
